# meval-symbolic-rs

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
examples/: eval.rs  plot.rs
src/: evaluatable.rs  expr.rs  extra_math.rs  lib.rs  shunting_yard.rs  tokenizer.rs
src/eqtn/: mod.rs  parser.rs  symbolic.rs
src/expr/: context.rs  de.rs  errors.rs  mod.rs  shunting_yard.rs  symbolic.rs  tokenizer.rs
src/expr/operators/: mod.rs
src/expr/operators/binary/: add.rs  atan2.rs  div.rs  hypot.rs  log.rs  max.rs  min.rs  mod.rs  mul.rs  powf.rs  rem.rs  sub.rs
src/expr/operators/ternary/: mod.rs  mul_add.rs
src/expr/operators/unary/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  cbrt.rs  ceil.rs  cos.rs  cosh.rs  exp.rs  exp2.rs  exp_m1.rs  floor.rs  fract.rs  ln.rs  ln_1p.rs  log10.rs  log2.rs  mod.rs  neg.rs  recip.rs  round.rs  sin.rs  (+6 more)
src/expr/parser/: de.rs  mod.rs  shunting_yard.rs  tokenizer.rs
src/operators/binary/: abs_sub.rs  add.rs  atan2.rs  div.rs  hypot.rs  log.rs  max.rs  min.rs  mod.rs  mul.rs  operator.rs  powf.rs  rem.rs  sub.rs
src/operators/ternary/: mod.rs  mul_add.rs  operator.rs
src/operators/unary/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  cbrt.rs  ceil.rs  cos.rs  cosh.rs  exp.rs  exp2.rs  exp_m1.rs  floor.rs  fract.rs  ln.rs  ln_1p.rs  log10.rs  log2.rs  mod.rs  neg.rs  operator.rs  recip.rs  round.rs  signum.rs  sin.rs  sinh.rs  sqrt.rs  tan.rs  tanh.rs  trunc.rs
src/solver/: heuristics.rs  mod.rs
src/solver/rules/: arithmetic.rs  exponential.rs  mod.rs  parser.rs  trigonometry.rs
