[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
description = "A simple math expression parser and evaluator."
documentation = "https://docs.rs/meval"
homepage = "https://github.com/Mr-Helpful/meval-symbolic-rs"
keywords = ["math", "parser", "expression", "formula", "evaluator"]
license = "Unlicense/MIT"
name = "meval-symbolic"
readme = "README.md"
repository = "https://github.com/Mr-Helpful/meval-symbolic-rs"
version = "1.0.0"
exclude = ["README.tpl", ".travis.yml"]

[dependencies]
fnv = "1.0.5"
nom = "7.1.3"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
gnuplot = "0.0.37"
serde_test = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.5.10"

[features]
default = []

[package.metadata.docs.rs]
features = [ "serde" ]
